# scmags

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  pytest.ini  setup.cfg
docs/source/: API.rst  cli.ipynb  conf.py  cr_scmags.ipynb  index.rst  installation.rst  requirements.txt  select.ipynb  visualization.ipynb
docs/source/._api/: scmags.ScMags.filter_genes.rst  scmags.ScMags.rst  scmags.ScMags.sel_clust_marker.rst
docs/source/._plot/: scmags.ScMags.dot_plot.rst  scmags.ScMags.knn_classifier.rst  scmags.ScMags.markers_heatmap.rst  scmags.ScMags.markers_tSNE.rst
docs/source/.ipynb_checkpoints/: select-checkpoint.ipynb  visualization-checkpoint.ipynb
scmags/: __init__.py  __main__.py  _api.py  _cli.py  _plot.py
scmags/datasets/: __init__.py  _datasets.py
scmags/datasets/data/: Baron_H1_Gene_Ann.csv  Baron_H1_Labels.csv  Li_Gene_Ann.csv  Li_Labels.csv  Pollen_Gene_Ann.csv  Pollen_Labels.csv
scmags/tests/: test_scmags.py
