[metadata]
name = scmags
version = 0.1.6
author = Yusuf Baran
author_email = fusuf.baran@gmail.com	
maintainer = Yusuf Baran
maintainer_email = fusuf.baran@gmail.com
description = Single Cell Marker Gene Selection Tool For Spatial Trancriptomics
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_file = LICENSE
url = https://github.com/doganlab/scmags
description_file = README.md

classifiers =
    Natural Language :: English
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering :: Bio-Informatics
	Topic :: Scientific/Engineering :: Visualization

[options]
install_requires =
    joblib >= "1.0.1"  
    matplotlib >= "3.3.4" 
    numpy >= "1.19.5"
    pandas >= "1.2.4"
    sklearn >= "0.24.1"
    scipy 
    seaborn 
    
include_package_data = True
packages = find:

python_requires = >= 3.6

[options.entry_points]
console_scripts =
    scmags=scmags.__main__:main
    


